[Fix Bug 846294] marketplace hero image breaks at mobile sizes

--- a/media/css/marketplace.less
+++ b/media/css/marketplace.less
@@ -360,12 +360,19 @@
 /* Tablet Layout: 760px */
 @media only screen and (min-width: @breakTablet) and (max-width: @breakDesktop) {
 
+    #apps-hero-background {
+        background-size: 100% auto;
+        bottom: 275px;
+        left: 475px;
+        width: auto;
+    }
+
     #main-feature {
         p {
             .span_narrow(6);
         }
         #marketplace-launcher {
-            .span_narrow(6);
+            .span_narrow(7);
             margin-bottom: @baseLine;
             #marketplace-panel {
                 width: @widthTablet - (@gridGutterWidth * 2);
@@ -404,6 +411,10 @@
 
 /* Mobile layout: 320px */
 @media only screen and (max-width: @breakTablet) {
+
+    #apps-hero-background {
+        display: none;
+    }
 
     #main-feature {
         p,
